# ClipChain

./: .gitignore  LICENSE  README.md  README.md.txt  package-lock.json  package.json
clipchain-ui/: .env.example  .firebaserc  .gitignore  README.md  cors.json  firebase.json  firestore.indexes.json  index.html  package-lock.json  package.json  storage.rules  tailwind.config.js  tsconfig.app.json  tsconfig.json  vite.config.ts
clipchain-ui/.firebase/: hosting.ZGlzdA.cache
clipchain-ui/functions/: index.js  package-lock.json  package.json  settle.js
clipchain-ui/server/: settleWatchtime.ts
clipchain-ui/src/: App.tsx  AppRoutes.tsx  anchor.ts  main.tsx
clipchain-ui/src/anchor/: setup.ts
clipchain-ui/src/components/: AuthDebug.tsx  ConnectWalletButton.tsx  CreatorDashboard.tsx  Dashboard.tsx  ErrorBoundary.tsx  FanDashboard.tsx  Header.tsx  Sidebar.tsx  SubscribeButton.tsx  UploadAvatar.tsx  UploadVideo.tsx  VideoCard.tsx  VideoGrid.tsx  VideoPlayer.tsx  WalletProviderWrapper.tsx  counter-state.tsx
clipchain-ui/src/firebase/: config.ts
clipchain-ui/src/idl/: clipchain.json
clipchain-ui/src/lib/: airdropFanToken.ts  createCreatorToken.ts  ensureCreatorToken.ts  incrementWatchTime.ts  safeWallet.ts  solanaRpc.ts  tokenMetadata.ts  transferTokens.ts  (+2 more)
frontend/src/: App.tsx  index.tsx
smart-contracts/: Anchor.toml  Cargo.toml
smart-contracts/tests/: clipchain.ts
src/componets/: ConnectWalletButton.tsx
viewfi/smart-contracts/: Anchor.toml
viewfi/smart-contracts/programs/clipchain/: Cargo.toml
viewfi/smart-contracts/programs/clipchain/src/: lib.rs
(+13 files in other folders)
