[package]
name = "clipchain"
version = "0.1.0"
edition = "2021"

[lib]
name = "clipchain"
crate-type = ["cdylib", "lib"]

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = "0.31.1"

[features]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
